updated owner authentication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<!-- <router-outlet></router-outlet>
- -->
+<router-outlet></router-outlet>
 
- <html lang="en">
+
+ <!-- <html lang="en">
      <head>
          <meta charset="utf-8">
          <title>Angular-Formatted Inventory</title>
@@ -10,7 +10,7 @@
 
      </head>
      <body>
-         <app-customer-layout></app-customer-layout>
+         <app-customer-layout></app-customer-layout> -->
          <!--<script src="/inv_dash.js"></script> -->
-     </body>
- </html>
+     <!-- </body>
+ </html> -->
