--- a/src/app/_customer/customer-prodlist/customer-prodlist.component.html
+++ b/src/app/_customer/customer-prodlist/customer-prodlist.component.html
@@ -3,7 +3,7 @@
     <h3>Take a look into our offered products below:</h3>
 </div>
 
-<div style="display: flex;">
+<div style="display: flex;" class="filter-bar">
     <mat-form-field appearance="standard">
         <mat-label>Search for an item:</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Titan" #input>
