--- a/src/app/layouts/customer-layout/customer-layout.component.html
+++ b/src/app/layouts/customer-layout/customer-layout.component.html
@@ -14,7 +14,7 @@
    
     <!--============ MIDDLE (MAIN) SECTION ============-->
     <div class="middle-part">
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </body>
