--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -21,6 +21,10 @@
       <span class="material-icons">visibility</span>
       <h3>Overview</h3>
     </a> -->
+    <button mat-button (click)= "onEditCred()">
+      <span class="material-icons">account_circle</span>
+      <h3>Account</h3>
+    </button>
     <button mat-button (click) = "onLogout()">
       <span class="material-icons">logout</span>
       <h3>Logout</h3>
