--- a/src/app/_customer/customer-prodlist/customer-prodlist.component.css
+++ b/src/app/_customer/customer-prodlist/customer-prodlist.component.css
@@ -1,5 +1,9 @@
 /*General styles*/
-
+.header-txt{
+  display: flex;
+  flex-direction:row;
+  padding-right: 10px;
+}
 h1 {
     font-weight: 500;
     font-size: 1.8rem;
@@ -42,24 +46,8 @@ td, th {
     width: 25%;
 }
 
-div div button {
-    height:60px;
-    width: 60px;
-    margin-left: 10px;
-}
 div {
     justify-content: space-between;
-}
-#edit-inventory-btn.active{
-  background-color: yellow;
-}
-
-#on-create-btn:disabled {
-  background-color: lightgray;
-}
-
-.del-btn:hover, .edit-btn:hover {
-  background-color: yellow;
 }
 
 img {
@@ -69,4 +57,55 @@ img {
 
 mat-cell{
   height: 100px;
+}
+/* GRID list style */
+
+.product_card {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  position: relative;
+  transition: all 300ms ease;;
+}
+.product_card:hover{
+  transform: scale(0.95);
+  cursor: pointer;
+}
+.img-container{
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;  
+  background-color: rgb(235, 252, 141);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+div.info2{
+  display: flex;
+  justify-content: space-between;
+}
+.info2 div{
+  display: flex;
+  vertical-align: middle;
+}
+mat-card-content {
+  padding: 5px;
+}
+.info2 div .Available{
+  color:rgb(98, 242, 98);
+}
+.info2 div .Not{
+  color: red;
+}
+mat-card div img{
+   /*this makes the image in src fit to the size specified below*/
+  width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+  height: 100%;
+  margin: auto;
+  width: max-content;
+}
+
+.prod-price{
+  position: absolute;
+  right: 0;
 }
