--- a/src/app/_customer/prodInfo/prod-info/prod-info.component.html
+++ b/src/app/_customer/prodInfo/prod-info/prod-info.component.html
@@ -1,6 +1,6 @@
 <mat-dialog-content>
     <mat-dialog-actions align="start">
-      <button mat-stroked-button mat-dialog-close><mat-icon>keyboard_backspace</mat-icon></button>
+      <button mat-stroked-button mat-dialog-close><mat-icon>close</mat-icon></button>
     </mat-dialog-actions>
     <mat-card class="product_card">
         <div class="img-container"><img mat-card-image [src]="data.imagePath"></div>
