--- a/src/app/_customer/cusnav/cusnav.component.html
+++ b/src/app/_customer/cusnav/cusnav.component.html
@@ -11,7 +11,7 @@
           <div><h3>Home</h3></div>
          </a>
  
-         <a routerLink="shop1">
+         <a routerLink="shop">
            <span class="material-icons">shopping_bag</span>
            <div><h3>Shop</h3></div>
          </a>
