--- a/src/app/_customer/prodInfo/prod-info/prod-info.component.css
+++ b/src/app/_customer/prodInfo/prod-info/prod-info.component.css
@@ -59,11 +59,19 @@ mat-dialog-actions{
     color: red;
   }
   mat-card div img{
-     /*this makes the image in src fit to the size specified below*/
+    /*this makes the image in src fit to the size specified below*/
     width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
     height: 100%;
     margin: auto;
     width: max-content;
+  }
+
+  mat-card-actions{
+    display: flex;
+    justify-content: center;
+  }
+  mat-card-actions button{
+    background-color: var(--color-yellow);
   }
   
   .prod-price{
