--- a/src/app/editcred/editcred.component.html
+++ b/src/app/editcred/editcred.component.html
@@ -13,32 +13,32 @@
         <div class="username-field">
             <mat-form-field appearance="outline">
                 <mat-label>Username</mat-label>
-                <input type="text" matInput ngModel name = "Username" required>
+                <input type="text" matInput [(ngModel)]="this.tempCredentials.username" name = "username" required>
             </mat-form-field>
         </div>
     
         <div class="password-field">
             <mat-form-field appearance="outline">
                 <mat-label>Current Password</mat-label>
-                <input type="text" matInput ngModel name = "Password" required>
+                <input type="text" matInput ngModel name = "currentPassword" required>
             </mat-form-field>
         </div>
         <div class="password-field">
             <mat-form-field appearance="outline">
                 <mat-label>New Password</mat-label>
-                <input type="text" matInput ngModel name = "Password" required>
+                <input type="text" matInput ngModel name = "newPassword" required>
             </mat-form-field>
         </div>
         <div class="password-field">
             <mat-form-field appearance="outline">
                 <mat-label>Confirm Password</mat-label>
-                <input type="text" matInput ngModel name = "Password" required>
+                <input type="text" matInput ngModel name = "confirmPassword" required>
             </mat-form-field>
         </div>
     </form>
 
     <div class="bottom-bar">
-        <button mat-stroked-button class="login-btn">Save</button>
+        <button mat-stroked-button (click)="onSubmit(itemForm)"class="login-btn">Save</button>
     </div>
     
     
