--- a/src/app/_customer/cusnav/cusnav.component.html
+++ b/src/app/_customer/cusnav/cusnav.component.html
@@ -21,7 +21,7 @@
           <div><h3>Details</h3></div>
         </a>
 
-        <a href="customer/#">
+        <a routerLink="cart">
           <span class="material-icons">shopping_cart</span>
           <div><h3>Cart</h3></div>
         </a>
