--- a/src/app/_customer/prodInfo/prod-info/prod-info.component.html
+++ b/src/app/_customer/prodInfo/prod-info/prod-info.component.html
@@ -21,7 +21,7 @@
                 <h4><b>Description</b></h4>
                 <p>{{data.description}}</p>
                 <mat-card-actions>
-                    <button mat-button><mat-icon>add_shopping_cart</mat-icon></button>
+                    <button mat-button (click)="onAddToCart(this.data)"><mat-icon>add_shopping_cart</mat-icon></button>
                 </mat-card-actions>
             </mat-card-content>
     </mat-card>
