added customer store info view and google map location

--- a/src/app/_customer/cusnav/cusnav.component.html
+++ b/src/app/_customer/cusnav/cusnav.component.html
@@ -16,7 +16,7 @@
            <div><h3>Shop</h3></div>
          </a>
 
-         <a href="customer/#">
+         <a routerLink="details">
           <span class="material-icons">phone</span>
           <div><h3>Details</h3></div>
         </a>
