--- a/src/app/_customer/cusdetails/cusdetails.component.css
+++ b/src/app/_customer/cusdetails/cusdetails.component.css
@@ -53,3 +53,12 @@ button{
   box-shadow: var(--card-shadow);
   transition: all 300ms ease;
 }
+
+a{
+  float: right;
+	text-align: center;
+  align-items: center;
+	padding: 0 30px;
+  transition: all 300ms ease;
+  margin-right: 200px;
+}
