--- a/src/app/_customer/cusdetails/cusdetails.component.html
+++ b/src/app/_customer/cusdetails/cusdetails.component.html
@@ -1,7 +1,11 @@
 <div class="inventory-table">
   <div class="display">
     <div>
-      <h1>Store Details</h1>
+      <h1>Store Details 
+        <button mat-raised-button (click)="onFeedback()" id="on-create-btn">
+          <mat-icon>feedback</mat-icon>
+      </button>
+      </h1>
       <h3>Display store information here</h3>
     </div>
   </div>
@@ -25,6 +29,5 @@
      loading="lazy" 
      referrerpolicy="no-referrer-when-downgrade">
      </iframe>
-
   </div>
 </div>
