--- a/src/app/_customer/cusfeedback/cusfeedback.component.html
+++ b/src/app/_customer/cusfeedback/cusfeedback.component.html
@@ -1,6 +1,6 @@
 <div class="top-bar">
     <h1>Customer Feedback</h1>
-    <h3>Please tell us what you think of our website.</h3>
+    <h3>Please tell us what you think of Romel's Mini Mart.</h3>
 </div>
 
 <form  #feedForm = "ngForm">
