--- a/src/app/_customer/cart/cart.component.html
+++ b/src/app/_customer/cart/cart.component.html
@@ -1,1 +1,82 @@
-<p>helloooo here's the cart page</p>
+<div class="header-txt">
+    <h1>Valued customer, welcome to your <b>Cart</b></h1>
+    <h3>Take a look into your products below and see the estimated sum:</h3>
+</div>
+<!-- <div class="contain">
+<div class="mat-elevation-z8 list">
+    <mat-card *ngFor="let product of this.cartProducts.filteredData">
+        <mat-checkbox></mat-checkbox>
+        {{product.product.name}}
+    </mat-card>
+</div>
+<div class="mat-elevation-z8 info">
+
+    <mat-card *ngFor="let product of this.cartProducts.filteredData">
+        {{product.product.name}}
+    </mat-card>
+</div>
+</div> -->
+<div class="contain">
+<table mat-table [dataSource]="cartProducts" class="mat-elevation-z8">
+    <!-- Checkbox Column -->
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+            <div class="flex-row">
+            <mat-checkbox (change)="$event ? selectAll():null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()">
+            </mat-checkbox> 
+            <div [hidden]="this.selection.selected.length == 0" (click)="onDeleteSelected()">
+                <button mat-button><mat-icon>delete</mat-icon></button>
+            </div>
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                        [checked]="selection.isSelected(row)"
+                        (change)="$event ? selection.toggle(row) : null">
+            </mat-checkbox>
+          </td>
+    </ng-container>
+
+    <!-- Image column -->
+    <ng-container matColumnDef="image" >
+        <th mat-header-cell *matHeaderCellDef>Image</th>
+        <td mat-cell *matCellDef="let product"><div class="img-container"><img src={{product.product.imagePath}}/></div> </td>
+    </ng-container>
+
+    <!-- Name -->
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let product">{{product.product.name}}</td>
+    </ng-container>
+
+    <!-- Quantity -->
+    <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef>Quantity</th>
+        <td mat-cell *matCellDef="let product">
+            <div class="flex-row">
+                <button mat-button (click)="product.quantity>1 ? onChangeQuantity(product, product.quantity-1) : onRemove(product)"><mat-icon>remove_circle</mat-icon></button>
+                <input type="text" matInput [(ngModel)]="product.quantity">
+                <button mat-button (click)="onChangeQuantity(product,product.quantity+1)"><mat-icon>add_circle</mat-icon></button>
+            </div>
+        </td>
+    </ng-container>
+
+    <!-- Price -->
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let product"><span>&#8369;</span>{{product.product.price}}</td>
+    </ng-container>
+    
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table> 
+<div class="summary">
+<h3><b>Total of prices of selectd Items: </b></h3>
+{{this.sumOfPrices}}
+</div>
+</div>
+
