--- a/src/app/_customer/cart/cart.component.html
+++ b/src/app/_customer/cart/cart.component.html
@@ -1,1 +1,84 @@
-<p>helloooo here's the cart page</p>
+<div class="container">
+    <div class="summ-card">
+        <div class="top">
+            <h1>ORDER SUMMARY</h1>
+        </div>
+   
+        <div class="bot">
+            <div class="data">
+                <h3>Number of Items</h3>
+                <h2>DATA_HERE</h2>
+                <h3>Total</h3>
+                <h2>DATA_HERE</h2>
+                
+            </div>
+        </div>
+
+    </div>
+    <div class="orders-card">
+        <div class="top">
+            <h1>ITEMS</h1>
+        </div>        
+        <div class="orders-table">
+            <div class="cart-products">
+                <ng-container>
+                    <table mat-table > </table>
+                </ng-container>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- DONT MIND
+<section class="cart">
+    <div class="summ">
+        <div class="card-top">
+            <h1>ORDER SUMMARY</h1>
+        </div>
+        <hr>
+        <div class="card-bot">
+            <div class="data">
+                <h3>Number of Items</h3>
+                <h2>DATA_HERE</h2>
+                <h3>Total</h3>
+                <h2>DATA_HERE</h2>
+                
+            </div>
+        </div>
+
+    </div>
+    <div class="orders">
+        <div class="card-orders">
+            <h1>ITEMS</h1>
+        </div>
+        <hr>
+        
+
+        <div class="data">
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+            <h1>ITEM_DATA</h1>
+        </div>
+
+    </div>
+</section>
+ -->
+
