--- a/src/app/_customer/cart/cart.component.html
+++ b/src/app/_customer/cart/cart.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<!-- <div class="container">
     <div class="summ-card">
         <div class="top">
             <h1>ORDER SUMMARY</h1>
         </div>
-   
+
         <div class="bot">
             <div class="data">
                 <h3>Number of Items</h3>
@@ -28,57 +28,117 @@
         </div>
 
     </div>
-</div>
+</div> -->
 
-<!-- DONT MIND
-<section class="cart">
-    <div class="summ">
-        <div class="card-top">
-            <h1>ORDER SUMMARY</h1>
+
+
+<div class="container">
+    <div class="summ-card">
+        <div class="top">
+            <div class="data">
+                <h1>ORDER SUMMARY</h1>
+            </div>
         </div>
         <hr>
-        <div class="card-bot">
+        <div class="bot">
             <div class="data">
                 <h3>Number of Items</h3>
-                <h2>DATA_HERE</h2>
+                <h2>{{this.sumOfQuantity}}</h2>
                 <h3>Total</h3>
-                <h2>DATA_HERE</h2>
+                <h2>{{this.sumOfPrices}}</h2>
                 
+            </div>
+        </div>
+    
+    </div>
+
+    <div class="orders-card">      
+        <div class="orders-table">
+            <div class="cart-products">
+                <!-- <div class="contain">
+                    <div class="mat-elevation-z8 list">
+                        <mat-card *ngFor="let product of this.cartProducts.filteredData">
+                            <mat-checkbox></mat-checkbox>
+                            {{product.product.name}}
+                        </mat-card>
+                    </div>
+                    <div class="mat-elevation-z8 info">
+
+                        <mat-card *ngFor="let product of this.cartProducts.filteredData">
+                            {{product.product.name}}
+                        </mat-card>
+                    </div>
+                </div> -->
+                <ng-container>
+                    <table mat-table [dataSource]="cartProducts" class="mat-elevation-z8">
+                        <!-- Checkbox Column -->
+                        <ng-container matColumnDef="select">
+                            <th mat-header-cell *matHeaderCellDef>
+                                <div class="flex-row">
+                                <mat-checkbox (change)="$event ? selectAll():null"
+                                            [checked]="selection.hasValue() && isAllSelected()"
+                                            [indeterminate]="selection.hasValue() && !isAllSelected()">
+                                </mat-checkbox> 
+                                <div [hidden]="this.selection.selected.length == 0" (click)="onDeleteSelected()">
+                                    <button mat-button><mat-icon>delete</mat-icon></button>
+                                </div>
+                                </div>
+                              </th>
+                              <td mat-cell *matCellDef="let row">
+                                <mat-checkbox (click)="$event.stopPropagation()"
+                                            [checked]="selection.isSelected(row)"
+                                            (change)="$event ? selection.toggle(row) : null">
+                                </mat-checkbox>
+                              </td>
+                        </ng-container>
+                    
+                        <!-- Image column -->
+                        <ng-container matColumnDef="image" >
+                            <th mat-header-cell *matHeaderCellDef>Image</th>
+                            <td mat-cell *matCellDef="let product"><div class="img-container"><img src={{product.product.imagePath}}/></div> </td>
+                        </ng-container>
+                    
+                        <!-- Name -->
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef>Name</th>
+                            <td mat-cell *matCellDef="let product">{{product.product.name}}</td>
+                        </ng-container>
+                    
+                        <!-- Quantity -->
+                        <ng-container matColumnDef="quantity">
+                            <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                            <td mat-cell *matCellDef="let product">
+                                <div class="flex-row">
+                                    <button mat-button (click)="product.quantity>1 ? onChangeQuantity(product, product.quantity-1) : onRemove(product)"><mat-icon>remove_circle</mat-icon></button>
+                                    <input type="text" matInput [(ngModel)]="product.quantity">
+                                    <button mat-button (click)="onChangeQuantity(product,product.quantity+1)"><mat-icon>add_circle</mat-icon></button>
+                                </div>
+                            </td>
+                        </ng-container>
+                    
+                        <!-- Price -->
+                        <ng-container matColumnDef="price">
+                            <th mat-header-cell *matHeaderCellDef>Price</th>
+                            <td mat-cell *matCellDef="let product"><span>&#8369;</span>{{product.product.price}}</td>
+                        </ng-container>
+                        
+                        <ng-container matColumnDef="delete">
+                            <th mat-header-cell *matHeaderCellDef>Delete</th>
+                            <button><mat-icon>Delete</mat-icon></button>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                        
+                        <!-- Row shown when there is no matching data. -->
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="4">NO DATA</td>
+                        </tr>
+                        
+                    </table>
+                </ng-container>
             </div>
         </div>
 
     </div>
-    <div class="orders">
-        <div class="card-orders">
-            <h1>ITEMS</h1>
-        </div>
-        <hr>
-        
-
-        <div class="data">
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-            <h1>ITEM_DATA</h1>
-        </div>
-
-    </div>
-</section>
- -->
-
+</div>
