--- a/src/app/_customer/cart/cart.component.html
+++ b/src/app/_customer/cart/cart.component.html
@@ -45,7 +45,7 @@
                 <h3>Number of Items</h3>
                 <h2>{{this.sumOfQuantity}}</h2>
                 <h3>Total</h3>
-                <h2>{{this.sumOfPrices}}</h2>
+                <h2><span>&#8369;</span>  {{this.sumOfPrices}}</h2>
                 
             </div>
         </div>
@@ -80,7 +80,7 @@
                                             [indeterminate]="selection.hasValue() && !isAllSelected()">
                                 </mat-checkbox> 
                                 <div [hidden]="this.selection.selected.length == 0" (click)="onDeleteSelected()">
-                                    <button mat-button><mat-icon>delete</mat-icon></button>
+                                    <button mat-icon-button><mat-icon>delete</mat-icon></button>
                                 </div>
                                 </div>
                               </th>
@@ -109,9 +109,9 @@
                             <th mat-header-cell *matHeaderCellDef>Quantity</th>
                             <td mat-cell *matCellDef="let product">
                                 <div class="flex-row">
-                                    <button mat-button (click)="product.quantity>1 ? onChangeQuantity(product, product.quantity-1) : onRemove(product)"><mat-icon>remove_circle</mat-icon></button>
-                                    <input type="text" matInput [(ngModel)]="product.quantity">
-                                    <button mat-button (click)="onChangeQuantity(product,product.quantity+1)"><mat-icon>add_circle</mat-icon></button>
+                                    <button mat-icon-button (click)="product.quantity>1 ? onChangeQuantity(product, product.quantity-1) : onRemove(product)"><mat-icon>remove_circle</mat-icon></button>
+                                    <div><input type="text" matInput [(ngModel)]="product.quantity"></div>
+                                    <button mat-icon-button (click)="onChangeQuantity(product,product.quantity+1)"><mat-icon>add_circle</mat-icon></button>
                                 </div>
                             </td>
                         </ng-container>
@@ -121,10 +121,10 @@
                             <th mat-header-cell *matHeaderCellDef>Price</th>
                             <td mat-cell *matCellDef="let product"><span>&#8369;</span>{{product.product.price}}</td>
                         </ng-container>
-                        
+                        <!-- delete -->
                         <ng-container matColumnDef="delete">
                             <th mat-header-cell *matHeaderCellDef>Delete</th>
-                            <button><mat-icon>Delete</mat-icon></button>
+                            <td mat-cell *matCellDef="let product"><button mat-icon-button (click)="onRemove(product)"><mat-icon>delete</mat-icon></button></td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
