--- a/src/app/_customer/cusfeedback/cusfeedback.component.html
+++ b/src/app/_customer/cusfeedback/cusfeedback.component.html
@@ -1,19 +1,21 @@
 <div class="top-bar">
-    <h1>Customer Feedback</h1>
-    <h3>Please tell us what you think of Romel's Mini Mart.</h3>
+  <h1>Customer Feedback</h1>
+  <h3>Help us improve our service</h3>
 </div>
-
+<mat-dialog-content>
 <form  #feedForm = "ngForm">
     <form class="feedback-form">
         <mat-form-field class="input-fb" appearance="fill">
           <mat-label>Leave a comment</mat-label>
-          <textarea matInput placeholder="Help us improve our service"></textarea>
+          <input class="text-field" type="text">
         </mat-form-field>
       </form>
-      <div class="bottom-bar">
-        <mat-dialog-actions>
-            <button mat-stroked-button (click)="onSubmitFB(feedForm)">Submit Feedback</button>
-            <button mat-stroked-button mat-dialog-close>Cancel</button>
-        </mat-dialog-actions>
-      </div>
 </form>
+</mat-dialog-content>
+
+<div class="bottom-bar">
+  <mat-dialog-actions>
+      <button mat-stroked-button (click)="onSubmitFB(feedForm)">Submit Feedback</button>
+      <button mat-stroked-button mat-dialog-close>Cancel</button>
+  </mat-dialog-actions>
+</div>
