--- a/src/app/_customer/cart/cart.component.html
+++ b/src/app/_customer/cart/cart.component.html
@@ -46,7 +46,6 @@
                 <h2>{{this.sumOfQuantity}}</h2>
                 <h3>Total</h3>
                 <h2><span>&#8369;</span>  {{this.sumOfPrices}}</h2>
-                
             </div>
         </div>
     
@@ -110,7 +109,7 @@
                             <td mat-cell *matCellDef="let product">
                                 <div class="flex-row">
                                     <button mat-icon-button (click)="product.quantity>1 ? onChangeQuantity(product, product.quantity-1) : onRemove(product)"><mat-icon>remove_circle</mat-icon></button>
-                                    <div><input type="text" matInput [(ngModel)]="product.quantity"></div>
+                                    <div><input type="number" matInput [(ngModel)]="product.quantity" (change)="onInputQuantityChange(product)"></div>
                                     <button mat-icon-button (click)="onChangeQuantity(product,product.quantity+1)"><mat-icon>add_circle</mat-icon></button>
                                 </div>
                             </td>
