--- a/src/app/_customer/cusdetails/cusdetails.component.css
+++ b/src/app/_customer/cusdetails/cusdetails.component.css
@@ -77,7 +77,11 @@ textarea{
   grid-column-start: 2;
   grid-row-start: 1;
   grid-row-end: 3;
-  /* background: var(---color-light);
+}
+iframe{
+  width: 100%;
+  height: 100%;
+  background: var(---color-light);
   border-radius: var(--card-border-radius); 
-  box-shadow: 0 0 3rem var(--color-info-light);; */
+  box-shadow: 0 0 3rem var(--color-info-light);;
 }
