--- a/src/app/_customer/cusdetails/cusdetails.component.css
+++ b/src/app/_customer/cusdetails/cusdetails.component.css
@@ -58,6 +58,7 @@ pre {
 }
 
 textarea{
+  border-radius: var(--card-border-radius);
   line-height: 1;
   font-weight: 500;
   font-size: 0.87rem;
@@ -65,11 +66,17 @@ textarea{
   padding:1rem 1rem;
   resize: none;
   width: 100%;
+  
   border: 1px solid gray;
 
 }
 .cust-feed .bot{
-  padding: 2rem  0 0;
+  padding: 1rem  0  0;
+}
+
+button{
+  background-color:lightgrey ;
+  border-radius: var(--card-border-radius);
 }
 
 /* -------------------GOOGLE MAPS--------------------- */
@@ -78,6 +85,7 @@ textarea{
   grid-row-start: 1;
   grid-row-end: 3;
 }
+
 iframe{
   width: 100%;
   height: 100%;
