--- a/src/app/owner/login/login.component.html
+++ b/src/app/owner/login/login.component.html
@@ -5,8 +5,9 @@
         <a href="https://www.freepik.com/vectors/ecommerce">Ecommerce vector created by bs_k1d - www.freepik.com</a>
         <a href="https://www.freepik.com/vectors/phone-shop">Phone shop vector created by bs_k1d - www.freepik.com</a>
     -->
-    <div class="login-card">
 
+    <div class="login-card" >
+        
         <div class="top-bar">
             <div class="yellow-strip">
                 <img src="./assets/romels_yellow_nocart.png" class="logo-img">
@@ -14,9 +15,12 @@
         </div>
 
         <div class="greeting"><h1>Welcome!</h1></div>
-        <div class="subhead"><h3>Please enter your username and password, then click <b>Login</b> to continue.</h3></div>
-        <form #itemForm="ngForm" autocomplete="off" class="login-form">    
-            <div class="username-field">
+
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
+
+        <div class="subhead" *ngIf="!isLoading"><h3>Please enter your username and password, then click <b>Login</b> to continue.</h3></div>
+        <form  #itemForm="ngForm" autocomplete="off" class="login-form" >    
+            <div class="username-field" *ngIf="!isLoading">
                 <mat-form-field appearance="outline">
                     <mat-label>Username</mat-label>
                     <input type="text" matInput ngModel name = "Username" required>
@@ -25,15 +29,15 @@
         
 
         
-            <div class="password-field">
+            <div class="password-field" *ngIf="!isLoading">
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input type="text" matInput ngModel name = "Password" required>
+                    <input type="password" matInput ngModel name = "Password" required>
                 </mat-form-field>
-            </div>
+            </div> 
         </form>
         
-        <div class="bottom-bar">
+        <div class="bottom-bar" *ngIf="!isLoading">
             <button mat-stroked-button (click)="onLogin(itemForm)" class="login-btn">Login</button>
         </div>
 
