--- a/src/app/owner/dashboard/dashboard.component.css
+++ b/src/app/owner/dashboard/dashboard.component.css
@@ -1,7 +1,8 @@
 .top-bar {
     display: flex;
     flex-direction: row;
-    background-color: #FFDB58;
+    background: var(--color-yellow);
+    border-radius: var(--card-border-radius);
     padding: 5px;
     align-items: center;
     justify-content: space-between;
@@ -46,6 +47,10 @@ button {
     height: 100%;
 }
 
+.dash{
+    display: flex;
+}
+
 .dash-card {
     color: var(--color-dark);
     background: var(--color-white);
@@ -54,4 +59,27 @@ button {
     padding: var(--card-padding);
     box-shadow: var(--card-shadow);
     transition: all 300ms ease;
+}
+
+.dash-item{
+    display: flex;
+    flex-wrap: wrap;
+    color: var(--color-dark);
+    width: max-content;
+    background: var(--color-yellow);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    margin:2rem;
+    transition: all 300ms ease;
+}
+
+.dash-item div{
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    flex-basis: 100%;
+    text-align: center;
+    font-weight: 800;
+    font-size: 1.8rem;
+    font-family: 'Poppins', sans-serif;
+    padding:1rem 1rem;
 }
