--- a/src/app/owner/sidebar/sidebar.component.css
+++ b/src/app/owner/sidebar/sidebar.component.css
@@ -4,6 +4,9 @@ aside {
   height: 100vh;
   background: var(--color-background);
   position: fixed;
+  left: 0;
+  padding-left:20px;
+  padding-right:30px;
 }
 
 /*Will contain logo and close sign.*/
@@ -25,7 +28,7 @@ aside .topbar {
 
 aside .logo img {
   margin-left: 1rem;
-  height: 4.2rem;
+  height: 4.4rem;
 }
 
 aside .sidebar {
