--- a/src/app/owner/displayInvCom/griddisplay/griddisplay.component.html
+++ b/src/app/owner/displayInvCom/griddisplay/griddisplay.component.html
@@ -4,26 +4,29 @@
         <mat-label>Search for an item:</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Titan" #input>
     </mat-form-field>
+    <div class="button-container">
+        <button mat-raised-button (click)="onCreate()" id="on-create-btn">
+            <mat-icon>add</mat-icon>
+        </button>
+        <button mat-raised-button (click)="onEditInventory()" id="edit-inventory-btn">
+            <mat-icon>edit</mat-icon>
+        </button>
+    </div>
 </div>
 
 
 
 <div class="mat-elevation-z8">
 
-    <mat-grid-list [cols]="6" rowHeight="250px" gutterSize="10px" role="grid" *ngIf="this.products.filteredData.length>0">
+    <mat-grid-list [cols]="5" rowHeight="250px" gutterSize="10px" role="grid" *ngIf="this.products.filteredData.length>0">
+        
         <mat-grid-tile class="mat-elevation-z1" *ngFor="let product of this.products.filteredData">
             <mat-card class="product_card" (click)="onProdSelect(product)">
                 <div class="img-container"><img mat-card-image [src]="product.imagePath"></div>
                 <mat-card-content>
-                    <div><b>{{product.name}}</b></div>
-                    <div class="info2">
-                        <div>
-                            <mat-icon class="{{product.availability}}">indeterminate_check_box</mat-icon>
-                            {{product.availability}}
-                        </div>
-                        <div class="price"><span>&#8369;</span>{{product.price}}</div>
-                    </div>
+                    <div class="product_name">{{product.name}}</div>
                 </mat-card-content>
             </mat-card>
         </mat-grid-tile>
+        
     </mat-grid-list>
