--- a/src/app/owner/middlesection/middlesection.component.html
+++ b/src/app/owner/middlesection/middlesection.component.html
@@ -6,12 +6,12 @@
 
 </div>
 <mat-tab-group animationDuration="0ms" >
-  <mat-tab label="Products New">
+  <mat-tab label="Products">
     <app-griddisplay></app-griddisplay>
   </mat-tab>
-  <mat-tab label="Products"> 
+  <!-- <mat-tab label="Products"> 
     <app-tabledisplay></app-tabledisplay>
-  </mat-tab>
+  </mat-tab> -->
   <mat-tab label="Categories">
     <app-catdisplay></app-catdisplay>
   </mat-tab>
