"added/deleted successfully" notif

--- a/src/app/customer/prodInfo/prod-info/prod-info.component.html
+++ b/src/app/customer/prodInfo/prod-info/prod-info.component.html
@@ -18,7 +18,7 @@
                 <h4><b>Category</b></h4>
                 <p>{{data.category.name}}</p>
                 <br>
-                <h4><b>Description</b></h4>
+                <h4><b>Descriptionnn</b></h4>
                 <p>{{data.description}}</p>
                 <mat-card-actions>
                     <button mat-button (click)="minus()"><mat-icon>remove_circle</mat-icon></button>
