added success message on owner side

--- a/src/app/owner/dashboard/dashboard.component.html
+++ b/src/app/owner/dashboard/dashboard.component.html
@@ -32,6 +32,11 @@
             <h3>Total Products Unavailable</h3><br>
             <div id>{{this.unavailableProducts}}</div>
         </div>
+        <div class="dash-item">
+            <span class="material-icons">description</span>
+            <h3>Total Categories</h3><br>
+            <div id>{{this.totalCategories}}</div>
+        </div>
     </div>
     
 
