--- a/src/app/owner/prodInfoOwner/productInfo.component.css
+++ b/src/app/owner/prodInfoOwner/productInfo.component.css
@@ -21,7 +21,7 @@
 
 mat-dialog-content {
     position: relative;
-    padding-bottom: 3rem;
+    padding-bottom: 0.5rem;
 }
 
 mat-dialog-actions {
@@ -59,7 +59,7 @@ div.info2 {
 }
 
 mat-card-content {
-    padding: 5px;
+    padding: 23px;
 }
 
 .info2 div .Available {
@@ -79,6 +79,33 @@ mat-card div img {
     width: max-content;
 }
 
+  mat-dialog-actions{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.5rem;
+    top: 56px;
+    left: 779px;
+  }
+
+  mat-card-actions button, mat-dialog-actions button{
+    background-color: var(--color-yellow);
+  }
+
+  mat-dialog-container {
+      height: 100%;
+      width: 100%;
+  }
+
+    /* top-bar X button style (needs more perhaps) */
+.top-bar .mat-stroked-button{
+    border-radius: var(--card-border-radius);
+  }
+    /* to make the dialogcontainer have the same border radius as our other elements */
+  ::ng-deep .mat-dialog-container {
+    width: 474px;
+    border-radius: var(--card-border-radius); 
+  }
+/*
 mat-card-actions {
     display: flex;
     justify-content: center;
@@ -88,7 +115,7 @@ mat-card-actions {
 mat-card-actions button {
     background-color: var(--color-yellow);
 }
-
+*/
 .prod-price {
     position: absolute;
     right: 0;
@@ -97,3 +124,4 @@ mat-card-actions button {
 input {
     text-align: center;
 }
+
