--- a/src/app/owner/storeinfo/storeinfo.component.css
+++ b/src/app/owner/storeinfo/storeinfo.component.css
@@ -1,56 +1,99 @@
-.top-bar {
-    display: flex;
-    flex-direction: row;
-    background: var(--color-yellow);
-    border-radius: var(--card-border-radius);
-    padding: 5px;
-    align-items: center;
-    justify-content: space-between;
-  }
+.container /*ENTIRE CONTENT*/{
   
-  h1 {
-    font-weight: 800;
-    font-size: 1.8rem;
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 0;
-    padding: 1rem 1rem 0;
-  }
+  width: 100vw;
   
-  h3 {
-    font-size: 0.87rem;
-    font-family: 'Poppins', sans-serif;
-    padding: 0 1rem 0;
-  }
-  
-  *{
-      box-sizing: border-box;
-  }
-  .sub-main{
-      border: 1px solid blue;
-  }
-
-  .main{
-      display: flex;
-
-  }
-  
-.display {
-    display: flex;
-    flex-direction: row;
-    padding: 5px;
-    justify-content: space-between;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1.5fr 1fr;
+  /* grid-template:  1fr 1fr / 1fr 2fr; SHORTCUT */
+  box-sizing: border-box;
+  margin: 50px 50px 0 0;
 }
-button{
+
+/* ----------------------STORE INFO--------------------------- */
+.store-info{
+  height:max-content;
+  padding: 2rem  2rem 2rem;
+  background: var(---color-light);
+  border-radius: var(--card-border-radius); 
+  box-shadow: 0 0 3rem var(--color-info-light);
+}
+
+div div button {
     height: 100%;
+    float: right;
 }
 
-.inventory-table {
-  color: var(--color-dark);
-  background: var(--color-white);
-  width: 100%;
+.top{
+  background: var(--color-yellow);
+  border-radius: var(--card-border-radius);  
+  margin-bottom:1px;
+}
+
+.top h1 {
+  padding: 5px 10px 5px;
+  font-weight: 800;
+  font-size: 1.8rem;
+  font-family: 'Poppins', sans-serif;
+}
+
+.store-info .bot {
+  background: var(--color-yellow);
+  border-radius: var(--card-border-radius);  
+  margin-bottom:1px;
+   
+}
+
+pre {
+  line-height: 3;
+  font-weight: 500;
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+}
+
+
+/* -----------CUSTOMER FEEDBACK--------------- */
+.cust-feed{
+  height: max-content;
+  padding: 2rem  2rem 2rem;
+  background: var(---color-light);
+  border-radius: var(--card-border-radius); 
+  box-shadow: 0 0 3rem var(--color-info-light);
+}
+
+textarea{
   border-radius: var(--card-border-radius);
-  padding: var(--card-padding);
-  box-shadow: var(--card-shadow);
-  transition: all 300ms ease;
+  line-height: 1;
+  font-weight: 500;
+  font-size: 0.87rem;
+  font-family: 'Poppins', sans-serif;
+  padding:1rem 1rem;
+  resize: none;
+  width: 100%;
+  
+  border: 1px solid gray;
+
+}
+.cust-feed .bot{
+  padding: 1rem  0  0;
+}
+
+button{
+  background-color:lightgrey ;
+  border-radius: var(--card-border-radius);
+}
+
+/* -------------------GOOGLE MAPS--------------------- */
+.map-container{
+  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+iframe{
+  width: 100%;
+  height: 100%;
+  background: var(---color-light);
+  border-radius: var(--card-border-radius); 
+  box-shadow: 0 0 3rem var(--color-info-light);;
 }
